--- a/policy.html
+++ b/policy.html
@@ -90,13 +90,13 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#products">Sản phẩm</a></li>
-        <li><a href="#solutions">Giải pháp</a></li>
-        <li><a href="#info">Thông tin</a></li>
-        <li><a href="#store">Cửa hàng</a></li>
+        <li><a href="/index.html#products">Sản phẩm</a></li>
+        <li><a href="/index.html#solutions">Giải pháp</a></li>
+        <li><a href="/index.html#info">Thông tin</a></li>
+        <li><a href="/index.html#store">Cửa hàng</a></li>
   
-        <li><a href="#chatbox" onclick="location.href='policy.html'">Chính sách quyền riêng tư</a></li>
-          <li><a href="#chatbox" onclick="location.href='term.html'">Điều khoản dịch vụ</a></li>
+        <li><a href="" onclick="location.href='policy.html'">Chính sách quyền riêng tư</a></li>
+          <li><a href="" onclick="location.href='term.html'">Điều khoản dịch vụ</a></li>
       </ul>
     </nav>
     <div class="language">
@@ -302,3 +302,4 @@
 </body>
 
 </html>
+
