--- a/policy.html
+++ b/policy.html
@@ -95,8 +95,8 @@
         <li><a href="/index.html#info">Thông tin</a></li>
         <li><a href="/index.html#store">Cửa hàng</a></li>
   
-        <li><a href="" onclick="location.href='policy.html'">Chính sách quyền riêng tư</a></li>
-          <li><a href="" onclick="location.href='term.html'">Điều khoản dịch vụ</a></li>
+        <li><a href="" onclick="location.href='/policy.html'">Chính sách quyền riêng tư</a></li>
+          <li><a href="" onclick="location.href='/term.html'">Điều khoản dịch vụ</a></li>
       </ul>
     </nav>
     <div class="language">
@@ -302,4 +302,5 @@
 </body>
 
 </html>
+
 
