--- a/policy.html
+++ b/policy.html
@@ -117,7 +117,7 @@
   </header>
 
   <div class="policy-container">
-    <h1>CHÍNH SÁCH BẢO MẬT DỊCH VỤ ADS AIPENCIL</h1>
+    <h1>CHÍNH SÁCH QUYỀN RIÊNG TƯ ADSAIPENCIL</h1>
     <p><strong>Bản chính thức - Ngày hiệu lực: 03 tháng 08 năm 2025</strong></p>
 
     <h2>Lời nói đầu và Cam kết Chung</h2>
@@ -125,10 +125,12 @@
       Chính sách Bảo mật ("Chính sách") này được ban hành bởi <strong>CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT NAM</strong> ("Chúng tôi", "Ads Aipencil", "Công ty"), đóng vai trò là Bên Kiểm soát Dữ liệu. Chúng tôi cam kết tôn trọng quyền riêng tư và bảo vệ dữ liệu cá nhân của người dùng ("Bạn", "Người dùng") một cách nghiêm túc nhất.
     </p>
     <p>
-      Chính sách này giải thích một cách minh bạch về: (i) những loại thông tin chúng tôi thu thập khi bạn truy cập và sử dụng nền tảng phần mềm Ads Aipencil ("Dịch vụ"); (ii) cơ sở pháp lý và mục đích của việc xử lý dữ liệu; (iii) cách thức chúng tôi sử dụng, chia sẻ, lưu trữ và bảo vệ thông tin đó; và (iv) các quyền của bạn đối với dữ liệu cá nhân của mình.
+     ADSAIPENCIL biết rằng sự riêng tư và bảo mật thông tin cá nhân rất quan trọng đối với Người dùng, vì vậy ADSAIPENCIL cam kết nỗ lực tối đa bảo vệ sự riêng tư của Người dùng. ADSAIPENCIL cam kết bảo mật tuyệt đối thông tin Người dùng theo các quy định pháp luật hiện hành về bảo vệ dữ liệu cá nhân. Việc thu thập và sử dụng thông tin của mỗi Người dùng chỉ được thực hiện khi có sự đồng ý hợp pháp của Người dùng đó, trừ những trường hợp pháp luật có quy định khác. 
+
+Chính sách bảo mật mô tả cách thức, quy trình ADSAIPENCIL thu thập, xử lý, quản lý và bảo vệ các thông tin cá nhân và dữ liệu của Người dùng khi sử dụng sản phẩm, dịch vụ của ADSAIPENCIL. Người dùng ADSAIPENCIL đồng ý sử dụng sản phẩm, dịch vụ của ADSAIPENCIL có nghĩa là Người dùng ADSAIPENCIL hoàn toàn đồng ý với các nội dung trong Chính sách bảo mật này. ADSAIPENCIL có thể sửa đổi nội dung của chính sách bằng cách đăng một bản sửa đổi lên hệ thống của ADSAIPENCIL, phiên bản sửa đổi có hiệu lực kể từ thời điểm đăng tải. Người dùng ADSAIPENCIL tiếp tục sử dụng sản phẩm, dịch vụ có nghĩa là Người dùng ADSAIPENCIL chấp nhận và chắc chắn đồng ý tuân theo Chính sách bảo mật mới nhất được cập nhật. 
     </p>
     <p>
-      Bằng việc đăng ký tài khoản hoặc sử dụng Dịch vụ của chúng tôi, bạn xác nhận đã đọc, hiểu và đồng ý với các quy trình và thông lệ được mô tả trong Chính sách này. Chính sách này là một phần không thể tách rời của Điều khoản Dịch vụ của chúng tôi và được xây dựng để tuân thủ chặt chẽ pháp luật Việt Nam, đặc biệt là Nghị định 13/2023/NĐ-CP về bảo vệ dữ liệu cá nhân.
+      Chính sách này giải thích một cách minh bạch về: (i) những loại thông tin chúng tôi thu thập khi bạn truy cập và sử dụng nền tảng phần mềm Ads Aipencil ("Dịch vụ"); (ii) cơ sở pháp lý và mục đích của việc xử lý dữ liệu; (iii) cách thức chúng tôi sử dụng, chia sẻ, lưu trữ và bảo vệ thông tin đó; và (iv) các quyền của bạn đối với dữ liệu cá nhân của mình.
     </p>
 
     <h3>1. CÁC LOẠI THÔNG TIN VÀ DỮ LIỆU CHÚNG TÔI THU THẬP</h3>
@@ -179,6 +181,7 @@
 
     <h3>4. CHIA SẺ VÀ TIẾT LỘ THÔNG TIN</h3>
     <ul>
+      <li><strong>Chúng tôi cam kết không bán, cho thuê hoặc trao đổi dữ liệu cá nhân của bạn. Việc chia sẻ thông tin được giới hạn nghiêm ngặt trong các trường hợp sau:</strong></li>
       <li><strong>Với nhà cung cấp dịch vụ (Bên xử lý dữ liệu phụ):</strong> Như AWS, Google Cloud, cổng thanh toán (theo DPA nghiêm ngặt).</li>
       <li><strong>Theo yêu cầu pháp lý:</strong> Khi có yêu cầu hợp lệ từ cơ quan chức năng (tòa án, chính phủ).</li>
       <li><strong>Chuyển giao kinh doanh:</strong> Dữ liệu của bạn có thể được chuyển giao trong trường hợp sáp nhập, mua lại, bán tài sản… (bên nhận phải cam kết bảo mật tương tự).</li>
@@ -302,6 +305,7 @@
 </body>
 
 </html>
+
 
 
 
