--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chính sách bảo mật dịch vụ AIPENCIL</title>
+  <title>CHÍNH SÁCH QUYỀN RIÊNG TƯ AIPENCIL</title>
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -428,3 +428,4 @@
 </body>
 
 </html>
+
