--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chính sách quyền riêng tư AIPENCIL</title>
+  <title>Chính sách quyền riêng tư AI Pencil</title>
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -139,55 +139,55 @@
   </header>
 
   <div class="policy-container">
-    <h1>CHÍNH SÁCH QUYỀN RIÊNG TƯ AIPENCIL</h1>
+    <h1>CHÍNH SÁCH QUYỀN RIÊNG TƯ AI Pencil</h1>
     <p><strong>Bản chính thức - Ngày hiệu lực: 03 tháng 08 năm 2025</strong></p>
 
     <h2>Lời nói đầu và Cam kết Chung</h2>
     <p>
       Chính sách Bảo mật ("Chính sách") này được ban hành bởi <strong>CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT
-        NAM</strong> ("Chúng tôi", "AIPENCIL", "Công ty"), đóng vai trò là Bên Kiểm soát Dữ liệu. Chúng tôi cam kết
+        NAM</strong> ("Chúng tôi", "AI Pencil", "Công ty"), đóng vai trò là Bên Kiểm soát Dữ liệu. Chúng tôi cam kết
       tôn trọng quyền riêng tư và bảo vệ dữ liệu cá nhân của người dùng ("Bạn", "Người dùng") một cách nghiêm túc nhất.
     </p>
     <p>
-      AIPENCIL biết rằng sự riêng tư và bảo mật thông tin cá nhân rất quan trọng đối với Người dùng, vì vậy
-      AIPENCIL cam kết nỗ lực tối đa bảo vệ sự riêng tư của Người dùng. AIPENCIL cam kết bảo mật tuyệt đối thông
+      AI Pencil biết rằng sự riêng tư và bảo mật thông tin cá nhân rất quan trọng đối với Người dùng, vì vậy
+      AI Pencil cam kết nỗ lực tối đa bảo vệ sự riêng tư của Người dùng. AI Pencil cam kết bảo mật tuyệt đối thông
       tin Người dùng theo các quy định pháp luật hiện hành về bảo vệ dữ liệu cá nhân. Việc thu thập và sử dụng thông tin
       của mỗi Người dùng chỉ được thực hiện khi có sự đồng ý hợp pháp của Người dùng đó, trừ những trường hợp pháp luật
       có quy định khác.
 
-      Chính sách bảo mật mô tả cách thức, quy trình AIPENCIL thu thập, xử lý, quản lý và bảo vệ các thông tin cá
+      Chính sách bảo mật mô tả cách thức, quy trình AI Pencil thu thập, xử lý, quản lý và bảo vệ các thông tin cá
       nhân
-      và dữ liệu của Người dùng khi sử dụng sản phẩm, dịch vụ của AIPENCIL. Người dùng AIPENCIL đồng ý sử dụng
+      và dữ liệu của Người dùng khi sử dụng sản phẩm, dịch vụ của AI Pencil. Người dùng AI Pencil đồng ý sử dụng
       sản
-      phẩm, dịch vụ của AIPENCIL có nghĩa là Người dùng AIPENCIL hoàn toàn đồng ý với các nội dung trong Chính
-      sách bảo mật này. AIPENCIL có thể sửa đổi nội dung của chính sách bằng cách đăng một bản sửa đổi lên hệ thống
-      của AIPENCIL, phiên bản sửa đổi có hiệu lực kể từ thời điểm đăng tải. Người dùng AIPENCIL tiếp tục sử dụng
-      sản phẩm, dịch vụ có nghĩa là Người dùng AIPENCIL chấp nhận và chắc chắn đồng ý tuân theo Chính sách bảo mật
+      phẩm, dịch vụ của AI Pencil có nghĩa là Người dùng AI Pencil hoàn toàn đồng ý với các nội dung trong Chính
+      sách bảo mật này. AI Pencil có thể sửa đổi nội dung của chính sách bằng cách đăng một bản sửa đổi lên hệ thống
+      của AI Pencil, phiên bản sửa đổi có hiệu lực kể từ thời điểm đăng tải. Người dùng AI Pencil tiếp tục sử dụng
+      sản phẩm, dịch vụ có nghĩa là Người dùng AI Pencil chấp nhận và chắc chắn đồng ý tuân theo Chính sách bảo mật
       mới nhất được cập nhật.
     </p>
     <p>
       Chính sách này giải thích một cách minh bạch về: (i) những loại thông tin chúng tôi thu thập khi bạn truy cập và
-      sử dụng nền tảng phần mềm AIPENCIL ("Dịch vụ"); (ii) cơ sở pháp lý và mục đích của việc xử lý dữ liệu; (iii)
+      sử dụng nền tảng phần mềm AI Pencil ("Dịch vụ"); (ii) cơ sở pháp lý và mục đích của việc xử lý dữ liệu; (iii)
       cách thức chúng tôi sử dụng, chia sẻ, lưu trữ và bảo vệ thông tin đó; và (iv) các quyền của bạn đối với dữ liệu cá
       nhân của mình.
     </p>
     <h3>0. Cam kết và yêu cầu đối với khách hàng</h3>
     <ul>
-      <li>AIPENCIL sẽ chỉ thu thập các thông tin và dữ liệu của Người dùng(điều 1) trong trường hợp cần thiết cho
+      <li>AI Pencil sẽ chỉ thu thập các thông tin và dữ liệu của Người dùng(điều 1) trong trường hợp cần thiết cho
         các
         mục đích chính đáng và hợp pháp để phục vụ cho lợi ích của Người dùng trong quá trình sử dụng dịch vụ của
-        AIPENCIL. Việc bạn truy cập, đăng ký, sử dụng AIPENCIL có nghĩa rằng bạn đã hiểu rõ và đồng ý, chấp
+        AI Pencil. Việc bạn truy cập, đăng ký, sử dụng AI Pencil có nghĩa rằng bạn đã hiểu rõ và đồng ý, chấp
         nhận ràng buộc bởi các quy định trong chính sách bảo mật của chúng tôi.</li>
-      <li>Dữ liệu của Người dùng AIPENCIL được AIPENCIL bảo vệ trong Chính sách bảo mật này là tất cả các dữ
-        liệu trên phần mềm AIPENCIL được khởi tạo và/hoặc có được trong suốt thời gian Người dùng AIPENCIL sử
-        dụng dịch vụ của AIPENCIL, tuy nhiên khi Người dùng AIPENCIL sử dụng các tiện ích của một bên thứ ba
-        cung cấp trên phần mềm AIPENCIL thì dữ liệu được khởi tạo hoặc có được liên quan đến các tiện ích này sẽ
-        do các đơn vị chủ quản của các tiện ích này đồng thời cùng với AIPENCIL thu thập, quản lý và bảo vệ theo
+      <li>Dữ liệu của Người dùng AI Pencil được AI Pencil bảo vệ trong Chính sách bảo mật này là tất cả các dữ
+        liệu trên phần mềm AI Pencil được khởi tạo và/hoặc có được trong suốt thời gian Người dùng AI Pencil sử
+        dụng dịch vụ của AI Pencil, tuy nhiên khi Người dùng AI Pencil sử dụng các tiện ích của một bên thứ ba
+        cung cấp trên phần mềm AI Pencil thì dữ liệu được khởi tạo hoặc có được liên quan đến các tiện ích này sẽ
+        do các đơn vị chủ quản của các tiện ích này đồng thời cùng với AI Pencil thu thập, quản lý và bảo vệ theo
         chính sách của từng bên thứ ba. </li>
-      <li>Người dùng AIPENCIL sẽ tự chịu trách nhiệm về bảo mật và lưu giữ mọi hoạt động sử dụng dịch vụ dưới tên
-        đăng ký, mật khẩu và hộp thư điện tử và/hoặc số điện thoại của mình. AIPENCIL không chịu trách nhiệm về
+      <li>Người dùng AI Pencil sẽ tự chịu trách nhiệm về bảo mật và lưu giữ mọi hoạt động sử dụng dịch vụ dưới tên
+        đăng ký, mật khẩu và hộp thư điện tử và/hoặc số điện thoại của mình. AI Pencil không chịu trách nhiệm về
         các thất thoát dữ liệu, bí mật thông tin của Người dùng do Người dùng vô tình hoặc cố ý gây ra.</li>
-      <li>Ngoài ra, Người dùng có trách nhiệm thông báo kịp thời cho AIPENCIL về những hành vi sử dụng trái phép,
+      <li>Ngoài ra, Người dùng có trách nhiệm thông báo kịp thời cho AI Pencil về những hành vi sử dụng trái phép,
         lạm dụng, vi phạm bảo mật, lưu giữ tên đăng ký và mật khẩu của bên thứ ba để có biện pháp giải quyết phù
         hợp.</li>
     </ul>
@@ -267,34 +267,34 @@
         diện cá nhân.</li>
     </ul>
 
-    <h3>5. THÔNG TIN CỦA NGƯỜI DÙNG AIPENCIL SẼ ĐƯỢC LƯU GIỮ TẠI HỆ THỐNG CỦA AIPENCIL KHI NÀO?</h3>
-    <p>Thông tin và dữ liệu của Người dùng AIPENCIL sẽ được AIPENCIL lưu lại trên hệ thống của AIPENCIL
+    <h3>5. THÔNG TIN CỦA NGƯỜI DÙNG AI Pencil SẼ ĐƯỢC LƯU GIỮ TẠI HỆ THỐNG CỦA AI Pencil KHI NÀO?</h3>
+    <p>Thông tin và dữ liệu của Người dùng AI Pencil sẽ được AI Pencil lưu lại trên hệ thống của AI Pencil
       trong các trường hợp thường gặp sau:</p>
     <ul>
-      <li>Khi Người dùng AIPENCIL đăng ký và/hoặc sử dụng các sản phẩm, dịch vụ của AIPENCIL (bao gồm sản phẩm,
-        dịch vụ có phí hoặc miễn phí), hoặc mở một tài khoản với AIPENCIL.</li>
-      <li>Khi Người dùng AIPENCIL nộp bất cứ biểu mẫu nào bao gồm nhưng không giới hạn ở các mẫu đơn hoặc các mẫu
-        khác liên quan đến các sản phẩm và dịch vụ của AIPENCIL, kể cả trực tuyến hay bằng các hình thức tài liệu
+      <li>Khi Người dùng AI Pencil đăng ký và/hoặc sử dụng các sản phẩm, dịch vụ của AI Pencil (bao gồm sản phẩm,
+        dịch vụ có phí hoặc miễn phí), hoặc mở một tài khoản với AI Pencil.</li>
+      <li>Khi Người dùng AI Pencil nộp bất cứ biểu mẫu nào bao gồm nhưng không giới hạn ở các mẫu đơn hoặc các mẫu
+        khác liên quan đến các sản phẩm và dịch vụ của AI Pencil, kể cả trực tuyến hay bằng các hình thức tài liệu
         vật lý.</li>
-      <li>Khi Người dùng AIPENCIL ký kết bất kỳ thỏa thuận nào hoặc cung cấp bất kỳ tài liệu hoặc thông tin khác
-        liên quan đến sự tương tác với AIPENCIL </li>
-      <li>Khi Người dùng AIPENCIL tương tác với AIPENCIL, chẳng hạn như qua điện thoại, (có thể được ghi âm),
+      <li>Khi Người dùng AI Pencil ký kết bất kỳ thỏa thuận nào hoặc cung cấp bất kỳ tài liệu hoặc thông tin khác
+        liên quan đến sự tương tác với AI Pencil </li>
+      <li>Khi Người dùng AI Pencil tương tác với AI Pencil, chẳng hạn như qua điện thoại, (có thể được ghi âm),
         gửi văn bản, fax, gặp trực tiếp, mạng xã hội và email.</li>
-      <li> Khi Người dùng AIPENCIL sử dụng các dịch vụ điện tử hoặc tương tác với AIPENCIL thông qua Nền tảng
-        của AIPENCIL hoặc sử dụng dịch vụ trên Nền tảng của AIPENCIL. Điều này bao gồm, nhưng không giới hạn
-        thông qua cookie AIPENCIL có thể triển khai khi Người dùng AIPENCIL tương tác với ứng dụng hoặc Nền tảng
-        của AIPENCIL.
+      <li> Khi Người dùng AI Pencil sử dụng các dịch vụ điện tử hoặc tương tác với AI Pencil thông qua Nền tảng
+        của AI Pencil hoặc sử dụng dịch vụ trên Nền tảng của AI Pencil. Điều này bao gồm, nhưng không giới hạn
+        thông qua cookie AI Pencil có thể triển khai khi Người dùng AI Pencil tương tác với ứng dụng hoặc Nền tảng
+        của AI Pencil.
       </li>
       <li>
-        Khi Người dùng AIPENCIL cung cấp dữ liệu cá nhân của mình cho AIPENCIL vì bất kỳ lý do nào;
+        Khi Người dùng AI Pencil cung cấp dữ liệu cá nhân của mình cho AI Pencil vì bất kỳ lý do nào;
       </li>
       <li>
-        Khi Người dùng AIPENCIL sử dụng các tiện ích của bên thứ ba bất kỳ cung cấp có trên phần mềm AIPENCIL
+        Khi Người dùng AI Pencil sử dụng các tiện ích của bên thứ ba bất kỳ cung cấp có trên phần mềm AI Pencil
         (bao gồm không giới hạn như tiện ích về vận chuyển, thanh toán, giải pháp tài chính, các sản phẩm không phải do
-        AIPENCIL là đơn vị chủ quản,…)
+        AI Pencil là đơn vị chủ quản,…)
       </li>
       <li>
-        Các trường hợp khác mà AIPENCIL thấy cần thiết phù hợp với quy định của pháp luật. </li>
+        Các trường hợp khác mà AI Pencil thấy cần thiết phù hợp với quy định của pháp luật. </li>
     </ul>
     <h3>6. QUYỀN CỦA BẠN ĐỐI VỚI DỮ LIỆU CÁ NHÂN</h3>
     <ul>
@@ -302,24 +302,24 @@
       <li><strong>Quyền xóa :</strong> Yêu cầu xóa toàn bộ dữ liệu cá nhân.</li>
       <li><strong>Quyền phản đối xử lý:</strong> Phản đối khi việc xử lý dựa trên lợi ích hợp pháp.</li>
       <li><strong>Quyền rút lại sự đồng ý:</strong> Có thể rút lại bất cứ lúc nào.</li>
-      <li>Người dùng AIPENCIL có thể truy cập, sửa chữa và cập nhật thông tin trên phần mềm của mình bằng cách đăng
-        nhập và sử dụng các tính năng quản trị. AIPENCIL hoàn toàn không chịu trách nhiệm liên quan đến tính chính
-        xác và hợp pháp của thông tin, hàng hóa, dịch vụ Người dùng AIPENCIL đưa lên website, phần mềm hoặc khi
-        Người dùng AIPENCIL cung cấp cho người tiêu dùng. </li>
+      <li>Người dùng AI Pencil có thể truy cập, sửa chữa và cập nhật thông tin trên phần mềm của mình bằng cách đăng
+        nhập và sử dụng các tính năng quản trị. AI Pencil hoàn toàn không chịu trách nhiệm liên quan đến tính chính
+        xác và hợp pháp của thông tin, hàng hóa, dịch vụ Người dùng AI Pencil đưa lên website, phần mềm hoặc khi
+        Người dùng AI Pencil cung cấp cho người tiêu dùng. </li>
     </ul>
     <h3>7. SỬ DỤNG COOKIES VÀ LOCAL STORAGE</h3>
-    <p>Cookie là một file dữ liệu được đặt trên đĩa cứng của Người dùng AIPENCIL bởi máy chủ của AIPENCIL. </p>
+    <p>Cookie là một file dữ liệu được đặt trên đĩa cứng của Người dùng AI Pencil bởi máy chủ của AI Pencil. </p>
     <ul>
-      <li>AIPENCIL sử dụng Cookie để cá nhân hóa và nâng cao hiệu quả sử dụng thời gian trực tuyến của Người dùng
-        AIPENCIL.</li>
-      <li>Cookie sẽ giúp AIPENCIL nhận ra Người dùng AIPENCIL nếu Người dùng AIPENCIL truy cập vào nhiều
-        trang trên trang web của AIPENCIL trong cùng một phiên, do đó AIPENCIL không cần phải hỏi mật khẩu của
-        Người dùng AIPENCIL trên mỗi trang. Sau khi Người dùng AIPENCIL đăng xuất hoặc đóng trình duyệt, cookie
-        này sẽ hết hạn và không còn có bất kỳ tác dụng nào. Người dùng AIPENCIL có thể chấp nhận hoặc từ chối dùng
-        cookie. Hầu hết những Browser tự động chấp nhận cookie, nhưng Người dùng AIPENCIL có thể thay đổi cài đặt để
-        từ chối tất cả những cookie nếu Người dùng AIPENCIL thích. Tuy nhiên, nếu Người dùng AIPENCIL chọn từ
+      <li>AI Pencil sử dụng Cookie để cá nhân hóa và nâng cao hiệu quả sử dụng thời gian trực tuyến của Người dùng
+        AI Pencil.</li>
+      <li>Cookie sẽ giúp AI Pencil nhận ra Người dùng AI Pencil nếu Người dùng AI Pencil truy cập vào nhiều
+        trang trên trang web của AI Pencil trong cùng một phiên, do đó AI Pencil không cần phải hỏi mật khẩu của
+        Người dùng AI Pencil trên mỗi trang. Sau khi Người dùng AI Pencil đăng xuất hoặc đóng trình duyệt, cookie
+        này sẽ hết hạn và không còn có bất kỳ tác dụng nào. Người dùng AI Pencil có thể chấp nhận hoặc từ chối dùng
+        cookie. Hầu hết những Browser tự động chấp nhận cookie, nhưng Người dùng AI Pencil có thể thay đổi cài đặt để
+        từ chối tất cả những cookie nếu Người dùng AI Pencil thích. Tuy nhiên, nếu Người dùng AI Pencil chọn từ
         chối cookie, điều đó có thể gây cản trở và ảnh hưởng đến một số dịch vụ và tính năng phụ thuộc vào cookie tại
-        AIPENCIL.</li>
+        AI Pencil.</li>
       <li>Local Storage cung cấp cho các ứng dụng web các phương thức và giao thức để lưu trữ dữ liệu phía máy khách.
         Lưu trữ web hỗ trợ lưu trữ dữ liệu liên tục, tương tự như cookie nhưng với dung lượng được tăng cường đáng kể và
         không có thông tin được lưu trữ trong tiêu đề yêu cầu HTTP.</li>
@@ -332,7 +332,7 @@
       <li>Phần mềm sẽ cần những quyền sau từ tài khoản Facebook của bạn để có thể hoạt động bình thường. Bạn sẽ được
         thông báo yêu cầu cấp các quyền này khi đăng nhập lần đầu tiên với phần mềm hoặc khi khắc phục sự cố trong khi
         sử dụng. Phần mềm sẽ không hoạt động bình thường nếu không được cấp các quyền cần thiết.</li>
-      <li>Khi bạn chủ động gỡ ứng dụng Facebook, hoặc khi hợp đồng của bạn với AIPENCIL bị hết hạn, mọi dữ liệu của
+      <li>Khi bạn chủ động gỡ ứng dụng Facebook, hoặc khi hợp đồng của bạn với AI Pencil bị hết hạn, mọi dữ liệu của
         bạn sẽ bị xóa khỏi hệ thống.
       </li>
     </ul>
@@ -348,7 +348,7 @@
       </tr>
       <tr>
         <td><em>email</em></td>
-        <td>Lấy email chính để liên kết tài khoản AIPENCIL, phục vụ đăng nhập, xác thực và nhận thông báo quan
+        <td>Lấy email chính để liên kết tài khoản AI Pencil, phục vụ đăng nhập, xác thực và nhận thông báo quan
           trọng.</td>
       </tr>
       <tr>
@@ -376,7 +376,7 @@
       </tr>
       <tr>
         <td><em>https://www.googleapis.com/auth/userinfo.email</em></td>
-        <td>Xem địa chỉ email chính trong Tài khoản Google để đăng ký/đăng nhập và liên kết tài khoản AIPENCIL.</td>
+        <td>Xem địa chỉ email chính trong Tài khoản Google để đăng ký/đăng nhập và liên kết tài khoản AI Pencil.</td>
       </tr>
       <tr>
         <td><em>https://www.googleapis.com/auth/userinfo.profile</em></td>
@@ -389,10 +389,10 @@
       <li><strong>Tên công ty:</strong> CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT NAM</li>
       <li><strong>Tên quốc tế:</strong> 10 GROUP VIETNAM TECHNOLOGY AND EDUCATION COMPANY LIMITED</li>
       <li><strong>Địa chỉ trụ sở:</strong> Số 1 Đường Thân Nhân Trung, Tổ 3, Xã Sóc Sơn, Thành phố Hà Nội, Việt Nam</li>
-      <li><strong>Email:</strong> hotro@AIPENCIL.com</li>
+      <li><strong>Email:</strong>admin@10education.vn</li>
       <li><strong>Mã số thuế:</strong> 0109735605</li>
       <li><strong>Ngày đăng ký kinh doanh:</strong> 20/08/2021</li>
-      <li><strong>Điện thoại:</strong> 0775 533 563</li>
+      <li><strong>Điện thoại:</strong>0961 382 006</li>
     </ul>
     <hr>
   </div>
@@ -401,8 +401,8 @@
     <div class="footer-container">
       <div class="footer-section">
         <h4>Liên hệ</h4>
-        <p>Email: support@autotool.vn</p>
-        <p>Điện thoại: 0961382006</p>
+        <p>Email: admin@10education.vn</p>
+        <p>Điện thoại: 0961 382 006</p>
         <p>Địa chỉ: 295 Thanh Nhàn Hai Bà Trưng Hà Nội</p>
       </div>
       <div class="footer-section">
@@ -414,18 +414,12 @@
           <a href="#" aria-label="Instagram">I</a>
         </div>
       </div>
-      <div class="footer-section newsletter">
-        <h4>Đăng ký nhận tin</h4>
-        <form>
-          <input type="email" placeholder="Nhập email của bạn" required />
-          <button type="submit">Gửi</button>
-        </form>
-      </div>
     </div>
   </footer>
 </body>
 
 </html>
+
 
 
 
