--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
     <div class="footer-container">
       <div class="footer-section">
         <h4>Liên hệ</h4>
-        <p>Email: support@autotool.vn</p>
-        <p>Điện thoại: 0961382006</p>
+        <p>Email: admin@10education.vn</p>
+        <p>Điện thoại: 0961 382 006</p>
         <p>Địa chỉ: 295 Thanh Nhàn Hai Bà Trưng Hà Nội</p>
       </div>
       <div class="footer-section">
@@ -223,13 +223,6 @@
           <a href="#" aria-label="LinkedIn">L</a>
           <a href="#" aria-label="Instagram">I</a>
         </div>
-      </div>
-      <div class="footer-section newsletter">
-        <h4>Đăng ký nhận tin</h4>
-        <form>
-          <input type="email" placeholder="Nhập email của bạn" required />
-          <button type="submit">Gửi</button>
-        </form>
       </div>
     </div>
   </footer>
