--- a/term.html
+++ b/term.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Điều khoản & Chính sách sử dụng - Ads Aipencil</title>
+  <title>Điều khoản & Chính sách sử dụng - AI Pencil</title>
   <link rel="stylesheet" href="css/index.css">
   <script src="js/index.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -117,12 +117,12 @@
 
   <!-- PHẦN ĐIỀU KHOẢN DỊCH VỤ -->
   <div class="terms-container">
-    <h1>ĐIỀU KHOẢN DỊCH VỤ ADS AIPENCIL</h1>
+    <h1>ĐIỀU KHOẢN DỊCH VỤ AI Pencil</h1>
     <p style="font-weight:bold">Bản chính thức – Hiệu lực từ ngày 03 tháng 8, 2025</p>
 
     <h3>LỜI MỞ ĐẦU</h3>
     <p>
-      Chào mừng đến với Ads Aipencil, sản phẩm của công ty 10 GROUP. Văn bản Điều Khoản và Điều Kiện Dịch Vụ này ("Điều khoản" hoặc "Thỏa thuận") là một thỏa thuận có tính ràng buộc pháp lý giữa bạn, với tư cách cá nhân hoặc đại diện hợp pháp của một pháp nhân ("Người dùng", "Bạn"), và <strong>CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT NAM</strong> ("Công ty", "Chúng tôi"), đơn vị sở hữu và vận hành nền tảng Ads Aipencil.
+      Chào mừng đến với AI Pencil, sản phẩm của công ty 10 GROUP. Văn bản Điều Khoản và Điều Kiện Dịch Vụ này ("Điều khoản" hoặc "Thỏa thuận") là một thỏa thuận có tính ràng buộc pháp lý giữa bạn, với tư cách cá nhân hoặc đại diện hợp pháp của một pháp nhân ("Người dùng", "Bạn"), và <strong>CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT NAM</strong> ("Công ty", "Chúng tôi"), đơn vị sở hữu và vận hành nền tảng AI Pencil.
     </p>
     <p>
       Bằng việc hoàn thành đăng ký, truy cập hoặc sử dụng dịch vụ của chúng tôi dưới bất kỳ hình thức nào, bạn cam kết và đảm bảo rằng bạn có đủ năng lực pháp lý để tham gia Thỏa thuận này. Bạn xác nhận rằng mình đã đọc kỹ, hiểu đầy đủ và đồng ý vô điều kiện bị ràng buộc bởi tất cả các điều khoản, chính sách, và thông báo trong văn bản này.
@@ -137,8 +137,8 @@
       <li><strong>Mã số thuế:</strong> 0109735605</li>
       <li><strong>Ngày đăng ký kinh doanh:</strong> 20/08/2021</li>
       <li><strong>Địa chỉ trụ sở:</strong> Số 1 phố Thân Nhân Trung, tổ 3, xã Sóc Sơn, Hà Nội, Việt Nam</li>
-      <li><strong>Email hỗ trợ chính thức:</strong> aipencilclass@gmail.com</li>
-      <li><strong>Hotline chăm sóc khách hàng:</strong> 0775 533 563</li>
+      <li><strong>Email hỗ trợ chính thức:</strong> admin@10education.vn</li>
+      <li><strong>Hotline chăm sóc khách hàng:</strong> 0961 382 006</li>
     </ul>
 
     <hr />
@@ -147,11 +147,11 @@
     <p><strong>Điều 1. Định nghĩa</strong></p>
     <ol>
       <li><strong>"Công ty"</strong>: Chỉ Công ty TNHH Công Nghệ Và Giáo Dục 10 Group Việt Nam, như chi tiết ở Phần I.</li>
-      <li><strong>"Ads Aipencil" hoặc "Dịch vụ"</strong>: Toàn bộ nền tảng phần mềm, bao gồm website, ứng dụng, API do Công ty phát triển để cung cấp công cụ phân tích, quản lý, tối ưu quảng cáo trên nền tảng bên thứ ba.</li>
+      <li><strong>"AI Pencil" hoặc "Dịch vụ"</strong>: Toàn bộ nền tảng phần mềm, bao gồm website, ứng dụng, API do Công ty phát triển để cung cấp công cụ phân tích, quản lý, tối ưu quảng cáo trên nền tảng bên thứ ba.</li>
       <li><strong>"Bên thứ ba"</strong>: Chủ yếu chỉ <strong>Tập đoàn Meta (bao gồm Facebook, Instagram)</strong>.</li>
       <li><strong>"Tài khoản người dùng"</strong>: Tài khoản duy nhất gán cho một người dùng để truy cập Dịch vụ.</li>
       <li><strong>"Dữ liệu người dùng"</strong>: Bao gồm thông tin nhận diện, dữ liệu quảng cáo thu thập qua API và dữ liệu hoạt động dịch vụ.</li>
-      <li><strong>"Sở hữu trí tuệ"</strong>: Bao gồm toàn bộ bản quyền, thương hiệu, mã nguồn, các quyền sở hữu liên quan đến dịch vụ Ads Aipencil.</li>
+      <li><strong>"Sở hữu trí tuệ"</strong>: Bao gồm toàn bộ bản quyền, thương hiệu, mã nguồn, các quyền sở hữu liên quan đến dịch vụ AI Pencil.</li>
       <li><strong>"Chính sách bảo mật, bảo vệ và xử lý thông tin Khách hàng và Đối tác"</strong>: Là chính sách được xây dựng nhằm tuân thủ Nghị định 13/2023/NĐ-CP về bảo vệ và xử lý dữ liệu cá nhân và các quy định pháp luật liên quan. Chính sách này được công khai tại đây.</li>
       <li><strong>"Chính sách thanh toán"</strong>: Chính sách quy định quy trình, hình thức, bảo mật thanh toán khi khách hàng và đối tác mua và thanh toán sản phẩm, dịch vụ. Chính sách này được công khai tại đây.</li>
     </ol>
@@ -212,7 +212,7 @@
     <p><strong>Điều 5. Cam kết về xử lý và sử dụng dữ liệu</strong></p>
     <ol>
       <li><strong>Mục đích sử dụng:</strong> Chúng tôi chỉ xử lý dữ liệu Người dùng hoàn toàn vì lợi ích của bạn.</li>
-      <li><strong>Cam kết về quyền <code>ads_read</code> và <code>ads_management</code> của Facebook API:</strong> Về bản chất, Ads Aipencil chỉ hoạt động như một trợ lý tự động, chỉ thao tác khi có lệnh từ bạn; không tự quyết định hoặc can thiệp vào tài khoản của bạn. Toàn quyền kiểm soát luôn thuộc về bạn.</li>
+      <li><strong>Cam kết về quyền <code>ads_read</code> và <code>ads_management</code> của Facebook API:</strong> Về bản chất, AI Pencil chỉ hoạt động như một trợ lý tự động, chỉ thao tác khi có lệnh từ bạn; không tự quyết định hoặc can thiệp vào tài khoản của bạn. Toàn quyền kiểm soát luôn thuộc về bạn.</li>
       <li><strong>Giới hạn sử dụng:</strong> Chúng tôi hoàn toàn không sử dụng dữ liệu của bạn cho bất kỳ mục đích nào khác nếu không có sự đồng ý riêng, rõ ràng của bạn với từng trường hợp cụ thể.</li>
     </ol>
 
@@ -285,7 +285,7 @@
 
     <h3>KẾT LUẬN</h3>
     <p>
-      Chúng tôi trân trọng cảm ơn bạn đã tin tưởng và sử dụng Ads Aipencil. Mọi thắc mắc về Điều khoản, vui lòng liên hệ: <strong>aipencilclass@gmail.com</strong>.
+      Chúng tôi trân trọng cảm ơn bạn đã tin tưởng và sử dụng AI Pencil. Mọi thắc mắc về Điều khoản, vui lòng liên hệ: <strong>aipencilclass@gmail.com</strong>.
     </p>
   </div>
 
@@ -311,6 +311,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
