--- a/term.html
+++ b/term.html
@@ -285,7 +285,7 @@
 
     <h3>KẾT LUẬN</h3>
     <p>
-      Chúng tôi trân trọng cảm ơn bạn đã tin tưởng và sử dụng AI Pencil. Mọi thắc mắc về Điều khoản, vui lòng liên hệ: <strong>aipencilclass@gmail.com</strong>.
+      Chúng tôi trân trọng cảm ơn bạn đã tin tưởng và sử dụng AI Pencil. Mọi thắc mắc về Điều khoản, vui lòng liên hệ: <strong> admin@10education.vn</strong>.
     </p>
   </div>
 
@@ -311,6 +311,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
