--- a/term.html
+++ b/term.html
@@ -242,16 +242,16 @@
       CÔNG TY TNHH CÔNG NGHỆ VÀ GIÁO DỤC 10 GROUP VIỆT NAM là chủ sở hữu thương hiệu, nhãn hiệu, hình ảnh, biểu tượng và toàn bộ nội dung hiển thị trên Website này;
     </p>
     <p>
-      https://fbads.aipencil.ai là website được xây dựng và vận hành bởi đội ngũ AIPENCIL, phục vụ cho mọi khách hàng, đối tác có nhu cầu mua, sử dụng sản phẩm, dịch vụ do AIPENCIL cung cấp hoặc hợp tác với AIPENCIL;
+      https://ads.aipencil.name.vn là website được xây dựng và vận hành bởi đội ngũ AIPENCIL, phục vụ cho mọi khách hàng, đối tác có nhu cầu mua, sử dụng sản phẩm, dịch vụ do AIPENCIL cung cấp hoặc hợp tác với AIPENCIL;
     </p>
     <p>
-      Tên miền https://fbads.aipencil.ai đã được đăng ký và sử dụng hợp pháp bởi Công ty theo quy định pháp luật;
+      Tên miền https://ads.aipencil.name.vn đã được đăng ký và sử dụng hợp pháp bởi Công ty theo quy định pháp luật;
     </p>
     <p>
-      Sản phẩm, dịch vụ trên website https://fbads.aipencil.ai bao gồm chương trình học, khoá học, gói dịch vụ, cùng các phòng thực hành sử dụng công nghệ AI hiện đại do chính đội ngũ phát triển, giáo viên, chuyên gia của AIPENCIL xây dựng;
+      Sản phẩm, dịch vụ trên website https://ads.aipencil.name.vn bao gồm chương trình học, khoá học, gói dịch vụ, cùng các phòng thực hành sử dụng công nghệ AI hiện đại do chính đội ngũ phát triển, giáo viên, chuyên gia của AIPENCIL xây dựng;
     </p>
     <p>
-      Việc tuân thủ các điều khoản đảm bảo việc mua bán, cung cấp dịch vụ tại https://fbads.aipencil.ai và ứng dụng AIPENCIL trên iOS/Android được thực hiện công khai, minh bạch, đảm bảo trách nhiệm bảo vệ quyền lợi người tiêu dùng.
+      Việc tuân thủ các điều khoản đảm bảo việc mua bán, cung cấp dịch vụ tại https://ads.aipencil.name.vn và ứng dụng AIPENCIL trên iOS/Android được thực hiện công khai, minh bạch, đảm bảo trách nhiệm bảo vệ quyền lợi người tiêu dùng.
     </p>
     <p>
       Điều khoản và điều kiện gồm các nội dung chính sau:
@@ -275,10 +275,10 @@
       Các Điều khoản và điều kiện này chịu sự điều chỉnh và giải thích theo pháp luật Việt Nam;
     </p>
     <p>
-      Mọi vấn đề phát sinh trong giao dịch trên https://fbads.aipencil.ai giữa AIPENCIL và Khách hàng/Đối tác chưa được quy định trong các điều khoản này sẽ được giải quyết theo pháp luật Việt Nam;
+      Mọi vấn đề phát sinh trong giao dịch trên https://ads.aipencil.name.vn giữa AIPENCIL và Khách hàng/Đối tác chưa được quy định trong các điều khoản này sẽ được giải quyết theo pháp luật Việt Nam;
     </p>
     <p>
-      AIpencil có quyền điều chỉnh các Điều khoản và điều kiện này vào bất kỳ thời điểm nào bằng cách đăng tải thông báo trên website fbads.aipencil.ai.
+      AIpencil có quyền điều chỉnh các Điều khoản và điều kiện này vào bất kỳ thời điểm nào bằng cách đăng tải thông báo trên website ads.aipencil.name.vn.
     </p>
 
     <hr />
@@ -311,6 +311,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
