--- a/policy.html
+++ b/policy.html
@@ -194,7 +194,7 @@
     <h3>1. CÁC LOẠI THÔNG TIN VÀ DỮ LIỆU CHÚNG TÔI THU THẬP</h3>
     <p>Để cung cấp một Dịch vụ hiệu quả và an toàn, chúng tôi thu thập các loại dữ liệu sau đây:</p>
       <li>
-        <strong>1.1. Dữ liệu do Người dùng Chủ động Cung cấp:</strong>
+        <strong> Dữ liệu do Người dùng Chủ động Cung cấp:</strong>
         <ul>
           <li><strong>Thông tin Đăng ký và Liên lạc Kinh doanh:</strong> Họ tên, địa chỉ email, số điện thoại, mật khẩu
             (mã hóa) khi bạn tạo tài khoản.</li>
@@ -207,7 +207,7 @@
         </ul>
       </li>
       <li>
-        <strong>1.2. Dữ liệu được Thu thập Tự động qua API:</strong>
+        <strong> Dữ liệu được Thu thập Tự động qua API:</strong>
         <ul>
           <li><strong>Dữ liệu Quảng cáo từ Meta (Facebook):</strong> Sau khi bạn cho phép qua OAuth, hệ thống sẽ thu
             thập dữ liệu tài khoản quảng cáo của bạn (chiến dịch, nhóm quảng cáo, tài sản sáng tạo, chỉ số hiệu suất, dữ
@@ -215,7 +215,7 @@
         </ul>
       </li>
       <li>
-        <strong>1.3. Dữ liệu Kỹ thuật và Hoạt động được Thu thập Tự động:</strong>
+        <strong> Dữ liệu Kỹ thuật và Hoạt động được Thu thập Tự động:</strong>
         <ul>
           <li><strong>Nhật ký Máy chủ:</strong> Địa chỉ IP, loại & phiên bản trình duyệt, hệ điều hành, thời gian truy
             cập, các trang đã xem.</li>
@@ -417,6 +417,7 @@
 </body>
 
 </html>
+
 
 
 
